@@ -192,6 +192,7 @@ AP  34- new GP function mfgaloisprojrep
     37- [libpari] identity_zv, identity_ZV
     38- [libpari] polintspec, polint_i
 BA  39- [libpari] FF_var, FF_preimagerel
+BA  40- new GP function ffmaprel
 
   Removed
      1- member functions .futu and .tufu [deprecated since 2.2]
